# mlzoomcamp-homework

01-intro/: homework1.ipynb
02-regression/: homework2.ipynb
03-classification/: homework3.ipynb
04-evalution/: homework4.ipynb
05-deployment/: Dockerfile  call_prediction.py  pyproject.toml  serve_model.py
06-trees/: homework6.ipynb
midterm_project/: Dockerfile  README.md  pyproject.toml
midterm_project/artifacts/: xgb_model.pkl
midterm_project/notebooks/: study_habits_eda.ipynb  study_habits_modeling.ipynb
midterm_project/src/: predict.py  serve.py  train.py
