[tool.poetry]
name = "midterm_project"
version = "0.1.0"
description = "Midterm project at ML Zoomcamp"
authors = ["Anna"]
readme = "README.md"
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.7.2"
requests = "^2.32.5"
fastapi = "^0.121.2"
uvicorn = "^0.38.0"
numpy = "^2.3.5"
pandas = "^2.3.3"
xgboost = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
